// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogCategoryScreen renders the blog category screen 1`] = `
<body>
  <div>
    <main
      class="container py-10 space-y-6"
    >
      <nav
        class="flex"
      >
        <ol
          class="inline-flex items-center space-x-2"
        >
          <li>
            <a
              class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
              href="/"
            >
              Home
            </a>
          </li>
          <span>
            <svg
              class="w-4 h-4 inline-block leading-4 shrink-0"
              fill="currentColor"
              height="1em"
              role="icon"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <li>
            <a
              class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
              href="/blog"
            >
              Blog
            </a>
          </li>
          <span>
            <svg
              class="w-4 h-4 inline-block leading-4 shrink-0"
              fill="currentColor"
              height="1em"
              role="icon"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <li>
            <a
              class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
              href="/blog/categories"
            >
              Categories
            </a>
          </li>
          <span>
            <svg
              class="w-4 h-4 inline-block leading-4 shrink-0"
              fill="currentColor"
              height="1em"
              role="icon"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <li>
            <a
              class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
            >
              Cracking the Coding Interview
            </a>
          </li>
        </ol>
      </nav>
      <div
        class="space-y-3"
      >
        <h1
          class="font-bold font-heading text-4xl"
        >
          Category: 
          Cracking the Coding Interview
        </h1>
        <p
          class="italic text-gray-600"
        >
          Last updated at 
          15 Oct, 2022
        </p>
      </div>
      <div
        data-testid="mdx-content"
      >
        <p
          class="my-5"
        >
          Cracking the Coding Interview: 189 Programming Questions and Solutions is a book by Gayle Laakmann McDowell about coding interviews.
        </p>
      </div>
      <ul
        aria-label="List of category's posts"
        class="space-y-1 list-disc list-inside"
        role="list"
      />
    </main>
  </div>
</body>
`;

exports[`BlogCategoryScreen renders the list of category's posts 1`] = `
<body>
  <div>
    <main
      class="container py-10 space-y-6"
    >
      <nav
        class="flex"
      >
        <ol
          class="inline-flex items-center space-x-2"
        >
          <li>
            <a
              class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
              href="/"
            >
              Home
            </a>
          </li>
          <span>
            <svg
              class="w-4 h-4 inline-block leading-4 shrink-0"
              fill="currentColor"
              height="1em"
              role="icon"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <li>
            <a
              class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
              href="/blog"
            >
              Blog
            </a>
          </li>
          <span>
            <svg
              class="w-4 h-4 inline-block leading-4 shrink-0"
              fill="currentColor"
              height="1em"
              role="icon"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <li>
            <a
              class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
              href="/blog/categories"
            >
              Categories
            </a>
          </li>
          <span>
            <svg
              class="w-4 h-4 inline-block leading-4 shrink-0"
              fill="currentColor"
              height="1em"
              role="icon"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <li>
            <a
              class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
            >
              Cracking the Coding Interview
            </a>
          </li>
        </ol>
      </nav>
      <div
        class="space-y-3"
      >
        <h1
          class="font-bold font-heading text-4xl"
        >
          Category: 
          Cracking the Coding Interview
        </h1>
        <p
          class="italic text-gray-600"
        >
          Last updated at 
          15 Oct, 2022
        </p>
      </div>
      <div
        data-testid="mdx-content"
      >
        <p
          class="my-5"
        >
          Cracking the Coding Interview: 189 Programming Questions and Solutions is a book by Gayle Laakmann McDowell about coding interviews.
        </p>
      </div>
      <ul
        aria-label="List of category's posts"
        class="space-y-1 list-disc list-inside"
        role="list"
      >
        <a
          class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
          href="/blog/how-to-mock-a-rest-api"
        >
          <li>
            How to mock a rest api
          </li>
        </a>
      </ul>
    </main>
  </div>
</body>
`;
